--- a/Project-prove/Project-prove.vbproj
+++ b/Project-prove/Project-prove.vbproj
@@ -107,6 +107,12 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Form1.Designer.vb">
+      <DependentUpon>Form1.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Form1.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Form11.Designer.vb">
       <DependentUpon>Form11.vb</DependentUpon>
     </Compile>
